@@ -1,6 +1,7 @@
 package com.example.capstone.dog.service;
 
 import com.example.capstone.dog.client.OpenApiClient;
+import com.example.capstone.dog.dto.CodeNameDto;
 import com.example.capstone.dog.dto.RescueDogDto;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -9,6 +10,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -22,14 +24,51 @@ public class RescueDogService {
     private final OpenApiClient openApiClient;
     private final ObjectMapper objectMapper;
 
-    public List<RescueDogDto> getDogs(int page, String kindCd, String size) {
-        String json = openApiClient.fetchRawJson(page, kindCd);
+    public List<CodeNameDto> getSidoList() {
+        String json = openApiClient.fetchSidoJson();
+        return parseCodeNameList(json); // orgCd/orgdownNm 기반으로 파싱
+    }
+
+    public List<CodeNameDto> getSigunguList(String uprCd) {
+        String json = openApiClient.fetchSigunguJson(uprCd);
+        return parseCodeNameList(json); // orgCd/orgdownNm 기반으로 파싱
+    }
+
+    private List<CodeNameDto> parseCodeNameList(String json) {
+        try {
+            JsonNode items = objectMapper.readTree(json)
+                    .path("response")   // ★ response 단계 추가
+                    .path("body")
+                    .path("items")
+                    .path("item");
+
+            List<CodeNameDto> list = new ArrayList<>();
+            if (items.isArray()) {
+                for (JsonNode n : items) {
+                    list.add(new CodeNameDto(
+                            n.path("orgCd").asText(),
+                            n.path("orgdownNm").asText()
+                    ));
+                }
+            } else if (items.isObject()) {
+                list.add(new CodeNameDto(
+                        items.path("orgCd").asText(),
+                        items.path("orgdownNm").asText()
+                ));
+            }
+            return list;
+        } catch (Exception e) {
+            throw new RuntimeException("행정구역 목록 파싱 오류", e);
+        }
+    }
+
+    // ★ 기존 유기견 조회 (uprCd/orgCd 추가)
+    public List<RescueDogDto> getDogs(int page, String kindCd, String size, String uprCd, String orgCd) {
+        String json = openApiClient.fetchRawJson(page, kindCd, uprCd, orgCd);
         List<RescueDogDto> dogs = parseDogsFromJson(json);
 
-        if (size != null && !size.trim().isEmpty()) {
-            return dogs.stream()
-                    .filter(dog -> size.equalsIgnoreCase(dog.getSize()))
-                    .collect(Collectors.toList());
+        if (size != null && !size.isBlank()) {
+            dogs = dogs.stream().filter(d -> size.equalsIgnoreCase(d.getSize())).collect(Collectors.toList());
         }
         return dogs;
     }
